--- a/public/assets/css/style_front.css
+++ b/public/assets/css/style_front.css
@@ -1,3 +1,16 @@
+html {
+	min-height: 100%;
+	position: relative;
+}
+
+body {
+	margin: 0;
+}
+
+ul{
+	padding: 0;	
+}
+
 /*******  TITRE  ********/
 
 /*******  FIN TITRE  ********/
@@ -6,7 +19,42 @@
 
 
 /*******  COPRS DE PAGE  ********/
+#wrapper_Questions {
+	width: 100%;
+	padding: 0;
+}
 
+.conteneur_L{
+	height: 100%;
+	width: 37%;	
+	position: absolute;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#illustration_Questions {
+	background-size: cover;
+	width: auto;
+}
+
+#nav_Category {
+	margin-top: 15%;
+	justify-content: center;
+	z-index: 1;
+	position: relative;
+	width: 15%;
+	float: left;
+}
+
+#nav_Category ul li{
+	margin-bottom: 10px;
+	list-style: none;
+	float: left;
+	background-color: red;
+	height: 120px;
+	width: 100%;
+}
 /*******  FIN COPRS DE PAGE  ********/
 
 
