--- a/public/assets/css/style_back.css
+++ b/public/assets/css/style_back.css
@@ -84,7 +84,7 @@ li {
 	margin: 1em 0;
 	display: flex;
 	flex-direction: column;
-	align-self: stretch;
+	align-items: stretch;
 	justify-content: space-between;
 }
 
@@ -95,12 +95,9 @@ li {
 	justify-content: center;
 }
 
-#add-category {
-	
-}
-
-#name-category {
-	
+.picto_category {
+	height: 7em;
+	width: 7em;
 }
 
 #link-category {
@@ -108,3 +105,8 @@ li {
 	flex-direction: row;
 	justify-content: space-around;
 }
+
+.add-question {
+	cursor:pointer;
+}
+
