--- a/public/assets/css/style_front.css
+++ b/public/assets/css/style_front.css
@@ -10,15 +10,18 @@ body {
 
 /*TITRE*/
 
+
 .headLine {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 400px;
+
 }
 
 .hLine {
-	font-size: 51px;
+	font-size: 4em;
+    text-indent: 0.135em;
 }
 
 /*BOUTTON*/
@@ -30,11 +33,17 @@ body {
 }
 
 .style-reset {
-	background-color: #ff5252;
+	background-color: transparent;
+    border:1px solid white;
 	color: white;
 	width: 500px;
 	height: 100px;
 	font-size: 45px;
+}
+
+.style-reset:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: grey;
 }
 
 #button-link {
@@ -46,9 +55,10 @@ body {
 /*FOOTER*/
 
 .bottNav {
-
     bottom: 0;
-    display: block;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
     height: 60px;
     font-family: "Replica-Regular", Arial, Helvetica, sans-serif;
     position: fixed;
@@ -57,7 +67,12 @@ body {
     z-index: 10
 }
 
+.fNav {
+    margin-left: 117%;
+}
+
 .navList a {
+    color: #ffffff;
     padding: 15px;
 }
 
