--- a/public/assets/css/style_frontQuestion.css
+++ b/public/assets/css/style_frontQuestion.css
@@ -12,6 +12,9 @@ padding: 0;
 list-style: none;
 }
 
+p {
+	margin: 0;
+}
 
 /*******  COPRS DE PAGE  ********/
 
@@ -22,7 +25,10 @@ list-style: none;
 
 .conteneur_L{
 	height: 100%;
-	width: 40%;	
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	position: absolute;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -30,16 +36,22 @@ list-style: none;
 }
 
 .conteneur_L h1 {
+	width: 75%;
 	font-size: 5em;
 	font-weight: bold;
-	text-align: center;
 	color: #ffffff;
-
+	text-shadow: 2px 2px 4px #000000;
 }
 
-#illustration_Questions {
-	background-size: cover;
-	width: auto;
+.bloc_nav_opacity {
+	margin-left: 40%;
+	width: 60%;
+	height: 31px;
+	background-color: black;
+	position:absolute;
+    bottom:0;
+    right:0;
+    opacity: 0.8;
 }
 
 #bloc_Questions {
@@ -51,29 +63,72 @@ list-style: none;
 }
 
 .bloc_Question {
-	border-top: 0.7em solid #ff751a;
+	border-top: 0.5em solid #737373;
 	display: block;
 	cursor : pointer;
 	width: 100%;
 	height: 25%;
-	background-color: #cce0ff;
+	background-color: black;
+	opacity: 0.8;
+}
+
+.questions {
+	
+	height: 100%;
+	width: 100%;
 }
 
 .questions p {
+	display: flex;
+	height: 100%;
 	padding: 1em 3em 1em 3em;
-	text-align: center;
-	font-size: 1.5em;
 	font-weight: bold;
+	font-size: 2.5em;
+	color: white;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .reponses {
-	display: none;
+	background-color: white;
+	opacity: 0.8;
 }
 
 .reponses p {
 	padding: 1em 3em 1em 3em;
 	text-align: center;
+	font-size: 1.3em;
+	color: black;
 }
+
+.bloc_lien-reponse{
+	display: block;
+	padding-bottom: 2em;
+}
+
+.lien-reponse{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.lien-reponse a{
+	padding-right: 6em;
+	font-size: 1.5em;
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.lien-reponse a:hover{
+	color: #47476b;
+}
+
+.affiche_Comments {
+	cursor: pointer;
+}
+
 
 .clear {
 	clear:both;
@@ -120,4 +175,6 @@ list-style: none;
 
 /*******  FIN PAGE COMMENTAIRE  ********/
 
-
+.navList a {
+	color: black;
+}
