--- a/public/assets/css/style_front.css
+++ b/public/assets/css/style_front.css
@@ -90,6 +90,7 @@ body {
     align-items: center;
     justify-content: center;
     margin-bottom: 10px;
+    border: 3px solid white;
     border-radius: 3%;
     width: 12.80em;
     height: 12.80em;
@@ -118,7 +119,7 @@ body {
 }
 
 .imBox {
-    display: flex;
+    display: block;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -131,6 +132,7 @@ body {
 }
 
 .secNam {
+
     font-size: 1.125em;
     color: #ffffff;
     z-index: 10000;
