--- a/public/assets/css/style_frontQuestion.css
+++ b/public/assets/css/style_frontQuestion.css
@@ -32,7 +32,6 @@ p {
 	height: 100%;
 	width: 100%;
 	display: flex;
-	justify-content: center;
 	align-items: center;
 	position: absolute;
 	background-position: center center;
@@ -41,7 +40,8 @@ p {
 }
 
 .conteneur_L h1 {
-	width: 73%;
+	width: 40%;
+	text-align: center;
 	font-size: 5em;
 	font-weight: bold;
 	color: #ffffff;
@@ -223,3 +223,29 @@ p {
 }
 
 /*******  FIN PAGE COMMENTAIRE  ********/
+
+
+
+/************************* Media Queries **********************/
+/* Sur tous types d'écran, quand la largeur de la fenêtre est comprise entre 1024px et 1280px */
+@media all and (min-width: 1200px) and (max-width: 1600px){
+	.conteneur_L h1 {font-size: 4em;}
+	.questions p {font-size: 2.1em;}
+	.lien-reponse a {font-size: 1.2em;}
+}
+
+@media all and (min-width: 861px) and (max-width: 1200px){
+	.conteneur_L h1 {font-size: 3em;}
+	.questions p {font-size: 1.5em;}
+	.reponses p {font-size: 1em;}
+	.lien-reponse a {font-size: 0.9em;}
+}
+
+@media all and (min-width: 450px) and (max-width: 860px){
+	.conteneur_L h1 {font-size: 2em;}
+	.questions p {font-size: 1.2em;}
+	.reponses p {font-size: 1em;}
+	.lien-reponse a {font-size: 0.8em;}
+}
+
+/************************* FIN Media Queries **********************/
