add et modif category MAJ

--- a/public/assets/css/style_back.css
+++ b/public/assets/css/style_back.css
@@ -29,7 +29,7 @@ li {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #404054;
+    background-color: #71948A;
     overflow-x: hidden;
    
     
