--- a/public/assets/css/style_frontQuestion.css
+++ b/public/assets/css/style_frontQuestion.css
@@ -98,7 +98,7 @@ p {
 	background-color: black;
 	opacity: 0.8;
 	color: white;
-	font-size: 0.5em;
+	font-size: 1em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
@@ -224,28 +224,68 @@ p {
 
 /*******  FIN PAGE COMMENTAIRE  ********/
 
+/*******  BOUTON RETOUR  ********/
+#toto {
+    
+   background-color: transparent;
+   border:1px solid white;
+   margin: 20px;
+   width: 100px;
+   height: 50px;
+   font-size: 25px;
+}
+
+#toto:hover {
+   background-color: rgba(0, 0, 0, 0.5);
+   color: grey;
+}
+
+.retour {
+   z-index: 789456;
+    
+}
+
+/*******  FIN BOUTON RETOUR  ********/
 
 
 /************************* Media Queries **********************/
 /* Sur tous types d'écran, quand la largeur de la fenêtre est comprise entre 1024px et 1280px */
-@media all and (min-width: 1200px) and (max-width: 1600px){
+@media all and (min-width: 1350px) and (max-width: 1700px){
+	.title_conteneur_L h1 {font-size: 3em;}
+}
+
+@media all and (min-width: 1200px) and (max-width: 1350px){
 	.conteneur_L h1 {font-size: 4em;}
+	.title_conteneur_L h1 {font-size: 3em;}
 	.questions p {font-size: 2.1em;}
 	.lien-reponse a {font-size: 1.2em;}
 }
 
 @media all and (min-width: 861px) and (max-width: 1200px){
 	.conteneur_L h1 {font-size: 3em;}
+	.title_conteneur_L h1 {font-size: 2.5em;}
 	.questions p {font-size: 1.5em;}
 	.reponses p {font-size: 1em;}
 	.lien-reponse a {font-size: 0.9em;}
+	#bloc_mentions {font-size: 0.8em;}
 }
 
 @media all and (min-width: 450px) and (max-width: 860px){
 	.conteneur_L h1 {font-size: 2em;}
+	.title_conteneur_L h1 {font-size: 2em;}
 	.questions p {font-size: 1.2em;}
 	.reponses p {font-size: 1em;}
 	.lien-reponse a {font-size: 0.8em;}
+	#bloc_mentions {font-size: 0.6em;}
+}
+
+@media all and (max-width: 450px){
+	.conteneur_L h1 {font-size: 0.8em;}
+	.questions p {font-size: 0.6em;}
+	.reponses p {font-size: 0.5em;}
+	.lien-reponse a {font-size: 0.5em; padding-right: 1em;}
+	.title_conteneur_L h1 {font-size: 0.8em;}
+	#bloc_mentions {font-size: 0.3em;}
 }
 
 /************************* FIN Media Queries **********************/
